tree-sitter-nl/test/corpus/directives.txt
================================================================================
Module directive
================================================================================

@module math

--------------------------------------------------------------------------------

(source_file
  (directive
    (module_directive
      name: (identifier))))

================================================================================
Version directive
================================================================================

@version 1.0.0

--------------------------------------------------------------------------------

(source_file
  (directive
    (version_directive
      version: (version_string))))

================================================================================
Target directive - Python
================================================================================

@target python

--------------------------------------------------------------------------------

(source_file
  (directive
    (target_directive
      target: (target_name))))

================================================================================
Target directive - TypeScript
================================================================================

@target typescript

--------------------------------------------------------------------------------

(source_file
  (directive
    (target_directive
      target: (target_name))))

================================================================================
Imports directive
================================================================================

@imports utils, helpers, core

--------------------------------------------------------------------------------

(source_file
  (directive
    (imports_directive
      imports: (import_list
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
Multiple directives
================================================================================

@module myapp
@version 2.1.0
@target python
@imports utils

--------------------------------------------------------------------------------

(source_file
  (directive
    (module_directive
      name: (identifier)))
  (directive
    (version_directive
      version: (version_string)))
  (directive
    (target_directive
      target: (target_name)))
  (directive
    (imports_directive
      imports: (import_list
        (identifier)))))

================================================================================
Comment before directive
================================================================================

# This is a math module
@module math

--------------------------------------------------------------------------------

(source_file
  (comment)
  (directive
    (module_directive
      name: (identifier))))
